--- a/FasTeamData/FasdsTeamSoap/FasdsTeamSoap.csproj
+++ b/FasTeamData/FasdsTeamSoap/FasdsTeamSoap.csproj
@@ -63,16 +63,16 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.svc" />
+    <Content Include="FasService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\UserDao.cs" />
     <Compile Include="Mapper\MapperEf.cs" />
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
+    <Compile Include="FasService.svc.cs">
+      <DependentUpon>FasService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IDataContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
