--- a/FasTeamData/FasTeamData/App.Config
+++ b/FasTeamData/FasTeamData/App.Config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="FasdsTeamEntities" connectionString="metadata=res://*/FasTeamModel.csdl|res://*/FasTeamModel.ssdl|res://*/FasTeamModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlproject.cnbomg0bximk.us-east-1.rds.amazonaws.com;initial catalog=FasdsTeam;persist security info=True;user id=Admin;password=Inf3stor!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -25,4 +22,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="FasdsTeamEntities" connectionString="metadata=res://*/FasdsTeamModel.csdl|res://*/FasdsTeamModel.ssdl|res://*/FasdsTeamModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlproject.cnbomg0bximk.us-east-1.rds.amazonaws.com;initial catalog=FasdsTeam;persist security info=True;user id=Admin;password=Inf3stor!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
