--- a/FasTeamData/FasTeamData/FasTeamData.csproj
+++ b/FasTeamData/FasTeamData/FasTeamData.csproj
@@ -32,11 +32,9 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -84,60 +82,60 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EfData.cs" />
-    <Compile Include="FasTeamModel.Context.cs">
+    <Compile Include="FasdsTeamModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FasTeamModel.Context.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="FasTeamModel.cs">
+    <Compile Include="FasdsTeamModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FasTeamModel.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="FasTeamModel.Designer.cs">
+    <Compile Include="FasdsTeamModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FasTeamModel.edmx</DependentUpon>
+      <DependentUpon>FasdsTeamModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Location.cs">
-      <DependentUpon>FasTeamModel.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
-      <DependentUpon>FasTeamModel.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.tt</DependentUpon>
     </Compile>
     <Compile Include="State.cs">
-      <DependentUpon>FasTeamModel.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>FasTeamModel.tt</DependentUpon>
+      <DependentUpon>FasdsTeamModel.tt</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EntityDeploy Include="FasTeamModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>FasTeamModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <None Include="FasTeamModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>FasTeamModel.edmx</DependentUpon>
-      <LastGenOutput>FasTeamModel.Context.cs</LastGenOutput>
-    </None>
-    <None Include="FasTeamModel.edmx.diagram">
-      <DependentUpon>FasTeamModel.edmx</DependentUpon>
-    </None>
-    <None Include="FasTeamModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>FasTeamModel.edmx</DependentUpon>
-      <LastGenOutput>FasTeamModel.cs</LastGenOutput>
+    <EntityDeploy Include="FasdsTeamModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FasdsTeamModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="FasdsTeamModel.edmx.diagram">
+      <DependentUpon>FasdsTeamModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FasdsTeamModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FasdsTeamModel.edmx</DependentUpon>
+      <LastGenOutput>FasdsTeamModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="FasdsTeamModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FasdsTeamModel.edmx</DependentUpon>
+      <LastGenOutput>FasdsTeamModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
