Added Service Reference to SOAP so that we can go across layers.

--- a/FasTeamLogic/FasTeamLogic/FasTeamLogicApi.csproj
+++ b/FasTeamLogic/FasTeamLogic/FasTeamLogicApi.csproj
@@ -47,6 +47,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -79,11 +81,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\FasdsService\configuration91.svcinfo" />
+    <None Include="Connected Services\FasdsService\configuration.svcinfo" />
+    <Content Include="Connected Services\FasdsService\FasTeamLogic.FasdsService.UserDao.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\FasdsService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Connected Services\FasdsService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -92,6 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Connected Services\FasdsService\FasdsService.wsdl" />
+    <None Include="Connected Services\FasdsService\FasdsService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\FasdsService\FasdsService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\FasdsService\FasdsService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -102,6 +128,12 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\FasdsService\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
