--- a/FasTeamLogic/FasTeamLogic/Web.config
+++ b/FasTeamLogic/FasTeamLogic/Web.config
@@ -44,4 +44,16 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IDataContract" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost/FasdsTeamSoap/FasdsService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDataContract"
+        contract="FasdsService.IDataContract" name="BasicHttpBinding_IDataContract" />
+    </client>
+  </system.serviceModel>
 </configuration>
