--- a/FasTeamLogic/FasTeamLogicBusiness/FasTeamLogicBusiness.csproj
+++ b/FasTeamLogic/FasTeamLogicBusiness/FasTeamLogicBusiness.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,8 +42,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessModels\UserDto.cs" />
+    <Compile Include="Connected Services\FasdsService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="LogicMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Connected Services\FasdsService\FasdsService.wsdl" />
+    <None Include="Connected Services\FasdsService\FasdsService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\FasdsService\FasdsService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\FasdsService\FasdsService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\FasdsService\FasTeamLogicBusiness.FasdsService.UserDao.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\FasdsService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\FasdsService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\FasdsService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\FasdsService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
