Created a logic helper to add, update, or read information for users.

--- a/FasTeamLogic/FasTeamLogicBusiness/FasTeamLogicBusiness.csproj
+++ b/FasTeamLogic/FasTeamLogicBusiness/FasTeamLogicBusiness.csproj
@@ -51,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="LogicHelper.cs" />
     <Compile Include="LogicMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
