Added Role DB service and interactions

--- a/FasTeamData/FasdsTeamSoap/FasdsTeamSoap.csproj
+++ b/FasTeamData/FasdsTeamSoap/FasdsTeamSoap.csproj
@@ -15,7 +15,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -74,6 +74,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\RoleDao.cs" />
     <Compile Include="DAO\UserDao.cs" />
     <Compile Include="FasdsService.svc.cs">
       <DependentUpon>FasdsService.svc</DependentUpon>
@@ -116,7 +117,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53230</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/FasdsTeamSoap</IISUrl>
+          <IISUrl>http://localhost:53230/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
