--- a/FasTeamWebUI/FasTeamWebUI/packages.config
+++ b/FasTeamWebUI/FasTeamWebUI/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Angular.UI.Bootstrap" version="2.4.0" targetFramework="net452" />
   <package id="angularjs" version="1.6.1" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
