--- a/FasTeamData/FasdsTeamSoap/packages.config
+++ b/FasTeamData/FasdsTeamSoap/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.5.9" targetFramework="net452" />
   <package id="AutoMapper" version="5.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
 </packages>
